Added inheritance to multiplayer duets, added tex type to some items and removed old code

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -4821,7 +4821,6 @@ Type = Colorized
 Alpha = 1
 
 #[SingDuetP1ThreePText]
-#Text = PLAYERNAME
 #X = 58
 #Y = 118
 #Font = 1
@@ -4834,6 +4833,7 @@ X = 710
 Y = 100
 W = 80
 H = 25
+Type = Transparent
 
 [SingDuetP1ThreePTextScore]
 X = 725
@@ -4846,6 +4846,7 @@ X = 710
 Y = 125
 W = 80
 H = 6
+Type = Transparent
 
 [SingDuetP1ThreePAvatar]
 X = 15
@@ -4854,590 +4855,348 @@ W = 26
 H = 36
 Z = 1
 Alpha = 1
+Type = Transparent
 
 #Player Two
 [SingDuetP2MStatic]
-X = 11
+Inheritance = SingDuetP1ThreePStatic
 Y = 224
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
 
-#[SingDuetP2MText]
-#Text = PLAYERNAME
-#X = 58
-#Y = 243
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingDuetP2MText]
+; Inheritance = SingDuetP1ThreePText
+; Y = 243
 
 [SingDuetP2MStatic2]
-X = 710
+Inheritance = SingDuetP1ThreePStatic2
 Y = 225
-W = 80
-H = 25
 
 [SingDuetP2MTextScore]
-X = 725
+Inheritance = SingDuetP1ThreePTextScore
 Y = 227
-Font = 0
-Size = 24
 
 [SingDuetP2MSingBar]
-X = 710
+Inheritance = SingDuetP1ThreePSingBar
 Y = 250
-W = 80
-H = 6
 
 [SingDuetP2MAvatar]
-X = 15
+Inheritance = SingDuetP1ThreePAvatar
 Y = 229
-W = 26
-H = 36
-Z = 1
-Alpha = 1
 
 #Player Three
 [SingDuetP3RStatic]
-X = 11
+Inheritance = SingDuetP1ThreePStatic
 Y = 349
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P3Dark
-Type = Colorized
-Alpha = 1
 
-#[SingDuetP3RText]
-#Text = PLAYERNAME
-#X = 58
-#Y = 368
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingDuetP3RText]
+; Inheritance = SingDuetP1ThreePText
+; Y = 368
 
 [SingDuetP3RStatic2]
-X = 710
+Inheritance = SingDuetP1ThreePStatic2
 Y = 350
-W = 80
-H = 25
 
 [SingDuetP3RTextScore]
-X = 725
+Inheritance = SingDuetP1ThreePTextScore
 Y = 352
-Font = 0
-Size = 24
 
 [SingDuetP3RSingBar]
-X = 710
+Inheritance = SingDuetP1ThreePSingBar
 Y = 375
-W = 80
-H = 6
 
 [SingDuetP3RAvatar]
-X = 15
+Inheritance = SingDuetP1ThreePAvatar
 Y = 354
-W = 26
-H = 36
-Z = 1
-Alpha = 1
 
 # FOUR DUET P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1DuetFourPStatic]
+Inheritance = SingDuetP1ThreePStatic
 X = 19
 Y = 110
 W = 38
 H = 50
-Tex = AvatarFrame2
-Color = P1Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP1DuetFourPText]
-#Text = PLAYERNAME
-#X = 65
-#Y = 126
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP1DuetFourPText]
+; Inheritance = SingDuetP1ThreePText
+; X = 65
+; Y = 126
 
 [SingP1DuetFourPStatic2]
-Tex = ScoreBG
+Inheritance = SingDuetP1ThreePStatic2
 X = 305
 Y = 117
-W = 80
-H = 25
+Tex = ScoreBG
 
 [SingP1DuetFourPTextScore]
-Text = 00000
+Inheritance = SingDuetP1ThreePTextScore
 X = 320
 Y = 119
-Font = 0
-Size = 24
 
 [SingP1DuetFourPSingBar]
+Inheritance = SingDuetP1ThreePSingBar
 X = 305
 Y = 142
-W = 80
-H = 6
 
 [SingP1DuetFourPAvatar]
+Inheritance = SingDuetP1ThreePAvatar
 X = 23
 Y = 115
 W = 30
 H = 40
-Z = 1
-Alpha = 1
 
 #Player Two
 [SingP2DuetFourPStatic]
-X = 19
+Inheritance = SingP1DuetFourPStatic
 Y = 292
-W = 38
-H = 50
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP2DuetFourPText]
-#Text = PLAYERNAME
-#X = 64
-#Y = 306
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP2DuetFourPText]
+; Inheritance = SingP1DuetFourPText
+; X = 64
+; Y = 306
 
 [SingP2DuetFourPStatic2]
-Tex = ScoreBG
-X = 305
+Inheritance = SingP1DuetFourPStatic2
 Y = 297
-W = 80
-H = 25
 
 [SingP2DuetFourPTextScore]
-Text = 00000
-X = 320
+Inheritance = SingP1DuetFourPTextScore
 Y = 299
-Font = 0
-Size = 24
 
 [SingP2DuetFourPSingBar]
-X = 305
+Inheritance = SingP1DuetFourPSingBar
 Y = 322
-W = 80
-H = 6
 
 [SingP2DuetFourPAvatar]
-X = 23
+Inheritance = SingP1DuetFourPAvatar
 Y = 297
-W = 30
-H = 40
-Z = 1
-Alpha = 1
 
 #Player Three
 [SingP3DuetFourPStatic]
+Inheritance = SingP1DuetFourPStatic
 X = 389
 Y = 112
-W = 38
-H = 50
-Tex = AvatarFrame2
 Color = P3Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP3DuetFourPText]
-#Text = PLAYERNAME
-#X = 435
-#Y = 126
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP3DuetFourPText]
+; Inheritance = SingP1DuetFourPText
+; X = 435
+; Y = 126
 
 [SingP3DuetFourPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1DuetFourPStatic2
 X = 700
-Y = 117
-W = 80
-H = 25
 
 [SingP3DuetFourPTextScore]
-Text = 00000
+Inheritance = SingP1DuetFourPTextScore
 X = 715
-Y = 119
-Font = 0
-Size = 24
 
 [SingP3DuetFourPSingBar]
+Inheritance = SingP1DuetFourPSingBar
 X = 700
-Y = 142
-W = 80
-H = 6
 
 [SingP3DuetFourPAvatar]
+Inheritance = SingP1DuetFourPAvatar
 X = 393
 Y = 117
-W = 30
-H = 40
-Z = 1
-Alpha = 1
 
 #Player Four
 [SingP4DuetFourPStatic]
-X = 389
+Inheritance = SingP3DuetFourPStatic
 Y = 292
-W = 38
-H = 50
-Tex = AvatarFrame2
 Color = P4Dark
-Type = Colorized
-Alpha = 1
 
-#[SingP4DuetFourPText]
-#Text = PLAYERNAME
-#X = 435
-#Y = 306
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP4DuetFourPText]
+; Inheritance = SingP3DuetFourPText
+; Y = 306
 
 [SingP4DuetFourPStatic2]
-X = 700
+Inheritance = SingP3DuetFourPStatic2
 Y = 297
-W = 80
-H = 25
 
 [SingP4DuetFourPTextScore]
-X = 715
+Inheritance = SingP3DuetFourPTextScore
 Y = 299
-Font = 0
-Size = 24
 
 [SingP4DuetFourPSingBar]
-X = 700
+Inheritance = SingP3DuetFourPSingBar
 Y = 322
-W = 80
-H = 6
 
 [SingP4DuetFourPAvatar]
-X = 393
+Inheritance = SingP3DuetFourPAvatar
 Y = 297
-W = 30
-H = 40
-Z = 1
-Alpha = 1
 
 # SIX  DUET P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1DuetSixPStatic]
+Inheritance = SingDuetP1ThreePStatic
 X = 19
 Y = 100
-W = 34
-H = 46
-Tex = AvatarFrame2
-Color = P1Dark
-Type = Colorized
-Alpha = 1
 
-[SingP1DuetSixPAvatar]
-X = 23
-Y = 105
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP1DuetSixPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 100
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP1DuetSixPText]
+; Inheritance = SingDuetP1ThreePText
+; X = 25
+; Y = 100
 
 [SingP1DuetSixPStatic2]
-Tex = ScoreBG
+Inheritance = SingDuetP1ThreePStatic2
 X = 305
 Y = 95
-W = 80
-H = 25
-Color = P1Dark
-Type = Colorized
+Tex = ScoreBG
 
 [SingP1DuetSixPTextScore]
-Text = 00000
+Inheritance = SingDuetP1ThreePTextScore
 X = 320
 Y = 97
-Font = 0
-Size = 24
 
 [SingP1DuetSixPSingBar]
+Inheritance = SingDuetP1ThreePSingBar
 X = 305
 Y = 120
-W = 80
-H = 6
+
+[SingP1DuetSixPAvatar]
+Inheritance = SingDuetP1ThreePAvatar
+X = 23
+Y = 105
 
 #Player Two
 [SingP2DuetSixPStatic]
-X = 19
+Inheritance = SingP1DuetSixPStatic
 Y = 227
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P2Dark
-Type = Colorized
-Alpha = 1
 
-[SingP2DuetSixPAvatar]
-X = 23
-Y = 232
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP2DuetSixPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 227
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP2DuetSixPText]
+; Inheritance = SingP1DuetSixPText
+; X = 25
+; Y = 227
 
 [SingP2DuetSixPStatic2]
-Tex = ScoreBG
-X = 305
+Inheritance = SingP1DuetSixPStatic2
 Y = 222
-W = 80
-H = 25
 Color = P2Dark
-Type = Colorized
 
 [SingP2DuetSixPTextScore]
-Text = 00000
-X = 320
+Inheritance = SingP1DuetSixPTextScore
 Y = 224
-Font = 0
-Size = 24
 
 [SingP2DuetSixPSingBar]
-X = 305
+Inheritance = SingP1DuetSixPSingBar
 Y = 247
-W = 80
-H = 6
+
+[SingP2DuetSixPAvatar]
+Inheritance = SingP1DuetSixPAvatar
+Y = 232
 
 #Player Three
 [SingP3DuetSixPStatic]
+Inheritance = SingDuetP1ThreePStatic
 X = 19
 Y = 352
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P3Dark
-Type = Colorized
-Alpha = 1
 
-[SingP3DuetSixPAvatar]
-X = 23
-Y = 357
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP3DuetSixPText]
-#Text = PLAYERNAME
-#X = 25
-#Y = 352
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP3DuetSixPText]
+; Inheritance = SingP1DuetSixPText
+; X = 25
+; Y = 352
 
 [SingP3DuetSixPStatic2]
-Tex = ScoreBG
-X = 305
+Inheritance = SingP1DuetSixPStatic2
 Y = 347
-W = 80
-H = 25
 Color = P3Dark
-Type = Colorized
 
 [SingP3DuetSixPTextScore]
-Text = 00000
-X = 320
+Inheritance = SingP1DuetSixPTextScore
 Y = 349
-Font = 0
-Size = 24
 
 [SingP3DuetSixPSingBar]
-X = 305
+Inheritance = SingP1DuetSixPSingBar
 Y = 372
-W = 80
-H = 6
+
+[SingP3DuetSixPAvatar]
+Inheritance = SingP1DuetSixPAvatar
+Y = 357
 
 #Player Four
 [SingP4DuetSixPStatic]
+Inheritance = SingP1DuetSixPStatic
 X = 389
-Y = 100
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P4Dark
-Type = Colorized
-Alpha = 1
 
-[SingP4DuetSixPAvatar]
-X = 393
-Y = 105
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP4DuetSixPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 100
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP4DuetSixPText]
+; Inheritance = SingP1DuetSixPText
+; X = 395
 
 [SingP4DuetSixPStatic2]
-Tex = ScoreBG
+Inheritance = SingP1DuetSixPStatic2
 X = 700
-Y = 95
-W = 80
-H = 25
 Color = P4Dark
-Type = Colorized
 
 [SingP4DuetSixPTextScore]
-Text = 00000
+Inheritance = SingP1DuetSixPTextScore
 X = 715
-Y = 97
-Font = 0
-Size = 24
 
 [SingP4DuetSixPSingBar]
+Inheritance = SingP1DuetSixPSingBar
 X = 700
-Y = 120
-W = 80
-H = 6
+
+[SingP4DuetSixPAvatar]
+Inheritance = SingP1DuetSixPAvatar
+X = 393
 
 #Player Five
 [SingP5DuetSixPStatic]
-X = 389
+Inheritance = SingP4DuetSixPStatic
 Y = 227
-W = 34
-H = 46
-Tex = AvatarFrame2
-Color = P5Dark
-Type = Colorized
-Alpha = 1
 
-[SingP5DuetSixPAvatar]
-X = 393
-Y = 232
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP5DuetSixPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 227
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP5DuetSixPText]
+; Inheritance = SingP4DuetSixPText
+; Y = 227
 
 [SingP5DuetSixPStatic2]
-Tex = ScoreBG
-X = 700
+Inheritance = SingP4DuetSixPStatic2
 Y = 222
-W = 80
-H = 25
 Color = P5Dark
-Type = Colorized
 
 [SingP5DuetSixPTextScore]
-Text = 00000
-X = 715
+Inheritance = SingP4DuetSixPTextScore
 Y = 224
-Font = 0
-Size = 24
 
 [SingP5DuetSixPSingBar]
-X = 700
+Inheritance = SingP4DuetSixPSingBar
 Y = 247
-W = 80
-H = 6
+
+[SingP5DuetSixPAvatar]
+Inheritance = SingP4DuetSixPAvatar
+Y = 232
 
 #Player Six
 [SingP6DuetSixPStatic]
-X = 389
+Inheritance = SingP4DuetSixPStatic
 Y = 352
-W = 34
-H = 46
-Tex = AvatarFrame2
 Color = P6Dark
-Type = Colorized
-Alpha = 1
 
-[SingP6DuetSixPAvatar]
-X = 393
-Y = 357
-W = 26
-H = 36
-Z = 1
-Alpha = 1
-
-#[SingP6DuetSixPText]
-#Text = PLAYERNAME
-#X = 395
-#Y = 352
-#Font = 1
-#Size = 18
-#Color = White
-#Align = 0
+; [SingP6DuetSixPText]
+; Inheritance = SingP4DuetSixPText
+; Y = 352
 
 [SingP6DuetSixPStatic2]
-Tex = ScoreBG
-X = 700
+Inheritance = SingP4DuetSixPStatic2
 Y = 347
-W = 80
-H = 25
 Color = P6Dark
-Type = Colorized
 
 [SingP6DuetSixPTextScore]
-Text = 00000
-X = 715
+Inheritance = SingP4DuetSixPTextScore
 Y = 349
-Font = 0
-Size = 24
 
 [SingP6DuetSixPSingBar]
-X = 700
+Inheritance = SingP4DuetSixPSingBar
 Y = 372
-W = 80
-H = 6
+
+[SingP6DuetSixPAvatar]
+Inheritance = SingP4DuetSixPAvatar
+Y = 357
 
 ## Oscilloscope Position Screen  ##
 # O N E  P L A Y E R  M O D E # # # # # # # # # # # # # # # # # # # #
@@ -5624,6 +5383,27 @@ Reflection = 0
 ReflectionSpacing = 13
 #end of main stuff
 
+[ScoreStaticNavigate]
+X = 440
+Y = 552
+W = 32
+H = 30
+Z = 0.5
+Tex = ButtonNavi
+Color = White
+Type = Transparent
+
+[ScoreTextNavigate]
+X = 480
+Y = 552
+Z = 0.5
+Color = White
+Font = 0
+Style = 0
+Size = 24
+Align = 0
+Text = SING_LEGEND_NAVIGATE
+
 # # # # # # # # # # # # # # # # # # One Player Score # # # # # # # # # # # #
 [ScoreTextName1]
 X = 197
@@ -5640,6 +5420,7 @@ X = 385
 Y = 140
 H = 80
 W = 75
+Type = Transparent
 
 [ScoreTextScore1]
 X = 422
@@ -5833,6 +5614,7 @@ Y = 170
 W = 72
 H = 97
 Z = 1
+Type = Transparent
 
 [ScorePlayer1Static5]
 X = 193
@@ -6227,6 +6009,7 @@ Y = 391
 W = 58
 H = 82
 Z = 1
+Type = Transparent
 
 [ScorePlayer4Static7]
 Inheritance = ScorePlayer1Static5
@@ -7475,74 +7258,32 @@ Align = 1
 Z = 1
 
 [SendScorePopupSelectSlide1]
+Inheritance = OptionsSelectSlide
 Text = SCORE_SEND_PLAYER
-Type = Transparent
 TexSBG = Rectangle
 TypeSBG = Colorized
-ShowArrows = 1
-OneItemOnly = 1
 X = 220
 Y = 220
 W = 120
 H = 25
 Z = 1
-SkipX = 10
 SBGW = 220
 TextSize = 24
 Color = ColorLight
 DColor = ColorDark
-TColor = White
-TDColor = White
 SBGColor = ColorLight
 SBGDColor = ColorDark
-STColor = White
 STDColor = White
 
 [SendScorePopupSelectSlide2]
+Inheritance = SendScorePopupSelectSlide1
 Text = SING_OPTIONS_NETWORK_WEBSITE
-TexSBG = Rectangle
-TypeSBG = Colorized
-ShowArrows = 1
-OneItemOnly = 1
-X = 220
 Y = 250
-W = 120
-H = 25
-Z = 1
-SkipX = 10
-SBGW = 220
-TextSize = 24
-Color = ColorLight
-DColor = ColorDark
-TColor = White
-TDColor = White
-SBGColor = ColorLight
-SBGDColor = ColorDark
-STColor = White
-STDColor = White
 
 [SendScorePopupSelectSlide3]
+Inheritance = SendScorePopupSelectSlide1
 Text = SING_OPTIONS_NETWORK_USERNAME
-TexSBG = Rectangle
-TypeSBG = Colorized
-ShowArrows = 1
-OneItemOnly = 1
-X = 220
 Y = 280
-W = 120
-H = 25
-Z = 1
-SkipX = 10
-SBGW = 220
-TextSize = 24
-Color = ColorLight
-DColor = ColorDark
-TColor = White
-TDColor = White
-SBGColor = ColorLight
-SBGDColor = ColorDark
-STColor = White
-STDColor = White
 
 [SendScorePopupButtonUsername]
 X = 380
@@ -7750,6 +7491,7 @@ Y = 250
 W = 360
 H = 16
 Color = ColorDark
+Type = Transparent
 
 [ScoreDownloadPopupProgressWeb]
 X = 220
@@ -12489,12 +12231,6 @@ Y = 130
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_RESOLUTION
 Y = 180
-
-#########unused at the moment#########
-#[OptionsGraphicsSelectLoadAnimation]
-#Inheritance = OptionsSelectSlide
-#Text = SING_OPTIONS_GRAPHICS_LOADANIMATION
-#Y = 85
 
 [OptionsGraphicsSelectScreenFade]
 Inheritance = OptionsSelectSlide
