Remove party theme

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -10,7 +10,7 @@
 [Theme]
 Version = 19.12
 Creator = Daniel20
-DefaultSkin = Static Violet
+DefaultSkin = Basic Violet
 
 [Colors]
 White = 255 255 255
