Created empty profiles screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -12069,18 +12069,30 @@ X = 35
 Y = 80
 Text = SING_OPTIONS_WEBCAM
 
+[OptionsButtonProfiles]
+Inheritance = OptionsButton
+X = 260
+Y = 425
+Tex = Optionsbuttonprofiles
+
+[OptionsButtonProfilesText1]
+Inheritance = OptionsButtonGameText
+X = 35
+Y = 80
+Text = SING_OPTIONS_PROFILES
+
 [OptionsButtonExit]
 Inheritance = OptionsButton
-X = 250
-Y = 425
-W = 70
-H = 80
+X = 30
+Y = 520
+W = 50
+H = 60
 Tex = Optionsbuttonback
 
 [OptionsButtonExitText1]
 Inheritance = OptionsButtonGameText
-X = 50
-Y = 80
+X = 30
+Y = 50
 Text = SING_OPTIONS_EXIT
 
 [OptionsButtonExit2]
@@ -12918,6 +12930,37 @@ Y = 500
 
 [OptionsWebcamButtonExitText1]
 Inheritance = OptionsButtonExit2Text
+
+
+[OptionsProfiles]
+Texts = 2
+
+[OptionsProfilesBackground]
+Tex = OptionsBG
+
+[OptionsProfilesStatic1]
+X = 30
+Y = 30
+W = 75
+H = 70
+Color = White
+Tex = Optionsbuttonprofiles
+Type = Transparent
+
+[OptionsProfilesText1]
+X = 115
+Y = 40
+Color = White
+Size = 45
+Text = SING_OPTIONS_PROFILES
+
+[OptionsProfilesButtonExit]
+Inheritance = OptionsButtonExit2
+Y = 500
+
+[OptionsProfilesButtonExitText1]
+Inheritance = OptionsButtonExit2Text
+
 
 # This is part of option network
 [InsertUserPopup]
