--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -162,7 +162,7 @@ Optionsbuttonmicrophones = [Options]buttonmicrophones.png
 Optionsbuttonadvanced    = [Options]buttonadvanced.png
 Optionsbuttonnetwork     = [Options]buttonnetwork.png
 Optionsbuttonwebcam      = [Options]buttonwebcam.png
-Optionsbuttonjukebox     = [Options]buttonjukebox.png
+Optionsbuttonprofiles    = [Options]buttonprofiles.png
 Optionsbuttonback        = [Options]buttonback.png
 
 # # # M A I N   P A R T Y # # #
@@ -293,7 +293,7 @@ WhiteFade = [color]white-fade.png
 BlackFade = [color]black-fade.png
 Pointer = [color]pointer.png
 
-# # # N A M E # # #
+# # # P L A Y E R   S E L E C T I O N # # #
 AvatarFrame = [name]frame.png
 CurrentPlayer = [name]player.png
 SelectFrame = [name]select.png
