Reset chessboard mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1522,16 +1522,17 @@ Y = 460
 Tex = SongBG
 
 [SongChessboardStatic1]
+#Left panel background
 Inheritance = SongSlideStatic1
-X = 10
-Y = 270
-W = 195
-H = 195
+X = 0
+Y = 70
+W = 205
+H = 525
 Z = 0.10
 Alpha = 0.45
 
 [SongChessboardStatic2]
-X = 750
+X = 748
 Y = 189
 W = 35
 H = 46
@@ -1543,7 +1544,7 @@ Reflection = 0
 ReflectionSpacing = 2
 
 [SongChessboardStatic3]
-X = 750
+X = 748
 Y = 333
 W = 35
 H = 46
@@ -1555,22 +1556,26 @@ Reflection = 0
 ReflectionSpacing = 2
 
 [SongChessboardCover]
-X = 240
-Y = 100
-W = 80
-H = 90
-ZoomThumbW = 100
-ZoomThumbH = 112
-Rows = 4
-Cols = 6
-Padding = 2
+#Central covers Panel
+X = 224
+Y = 70
+W = 68
+H = 92
+# Need to be checked:
+ZoomThumbW = 120
+# Need to be checked:
+ZoomThumbH = 120
+Rows = 5
+Cols = 7
+Padding = 3
 Reflections = 0
 
 [SongChessboardMainCover]
-X = 10
-Y = 100
-W = 195
-H = 170
+#Video player preview
+X = 9
+Y = 83
+W = 186
+H = 145
 Type = Transparent
 
 [SongChessboardEqualizer]
@@ -1584,28 +1589,28 @@ Length = 30
 [SongChessboardMedleyIcon]
 Inheritance = SongMedleyIcon
 X = 40
-Y = 433
+Y = 393
 W = 28
 H = 18
 
 [SongChessboardCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
 X = 40
-Y = 433
+Y = 393
 W = 28
 H = 18
 
 [SongChessboardVideoIcon]
 Inheritance = SongVideoIcon
-X = 18
-Y = 430
+X = 15
+Y = 390
 W = 16
 H = 23
 
 [SongChessboardDuetIcon]
 Inheritance = SongDuetIcon
 X = 40
-Y = 430
+Y = 390
 W = 18
 H = 22
 
@@ -1615,31 +1620,42 @@ X = 123
 Y = 430
 
 [SongChessboardTextArtist]
-Inheritance = SongSlideTextArtist
-X = 105
-Y = 292
-W = 180
+X = 102
+Y = 240
+W = 192
+Color = White
+Font = 1
 Size = 21
+Align = 1
+Text =
 
 [SongChessboardTextTitle]
-Inheritance = SongSlideTextTitle
-X = 105
-Y = 355
-W = 180
-Size = 21
+X = 102
+Y = 303
+W = 192
+Color = White
+Font = 0
+Size = 20
+Align = 1
+Text =
 
 [SongChessboardTextNumber]
-Inheritance = SongSlideTextNumber
 X = 195
-Y = 435
+Y = 395
+Z = 0.95
+Color = White
 Size = 15
 Align = 2
+Reflection = 0
+ReflectionSpacing = 21
 
 [SongChessboardTextYear]
-Inheritance = SongSlideTextYear
-X = 105
-Y = 431
-Size = 18
+X = 100
+Y = 394
+Z = 0.95
+Color = White
+Size = 16
+Align = 1
 
 #################
 #### Legend  ####
@@ -1647,104 +1663,113 @@ Size = 18
 
 [SongChessboardStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 567
-Y = 485
+X = 607
+Y = 435
 
+#text title legend
 [SongChessboardTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 646
-Y = 490
+X = 696
+Y = 440
 
-[SongChessboardStaticNonParty2]
+#icon video legend
+[SongChessboardStaticNonParty2] 
 Inheritance = SongStaticNonParty2
-X = 581
-Y = 510
+X = 631
+Y = 460
 
+#text video legend
 [SongChessboardTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 610
-Y = 512
+X = 660
+Y = 462
 
+#icon medley legend
 [SongChessboardStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 580
-Y = 530
+X = 630
+Y = 480
 
+#text medley legend
 [SongChessboardTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 610
-Y = 532
+X = 660
+Y = 482
 
+#icon medley calculated legend
 [SongChessboardStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 580
-Y = 550
+X = 630
+Y = 500
 
+#text medley legend
 [SongChessboardTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 610
-Y = 552
+X = 660
+Y = 502
 
+#icon duet legend
 [SongChessboardStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 580
-Y = 570
+X = 630
+Y = 520
 
+#text duet legend
 [SongChessboardTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 610
-Y = 572
+X = 660
+Y = 522
 
 [SongChessboardTextMaxScore]
 Inheritance = SongTextMaxScore
-X = 15
+X = 5
 Y = 488
-Size = 20
+Size = 15
 
 [SongChessboardTextMediaScore]
 Inheritance = SongTextMediaScore
-X = 15
+X = 5
 Y = 528
-Size = 20
+Size = 15
 
 [SongChessboardTextMaxScore2]
 Inheritance = SongTextMaxScore2
 X = 110
 Y = 488
-Size = 20
+Size = 15
 
 [SongChessboardTextMediaScore2]
 Inheritance = SongTextMediaScore2
 X = 110
 Y = 528
-Size = 20
+Size = 15
 
 [SongChessboardTextScoreUser]
 Inheritance = SongTextScoreUser
-X = 95
+X = 138
 Y = 506
-Size = 20
-Align = 1
+Size = 15
 
 [SongChessboardTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
-X = 165
+X = 195
 Y = 488
-Size = 20
+Size = 15
+Align = 2
 
 [SongChessboardTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
-X = 165
+X = 195
 Y = 528
-Size = 20
+Size = 15
+Align = 2
 
 [SongChessboardTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
-X = 185
+X = 165
 Y = 506
-Size = 20
-Align = 1
-
+Size = 15
+Align = 2
 [SongChessboardStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
 X = 30
@@ -1821,41 +1846,11 @@ X = 107
 Y = 540
 
 [SongChessboardTextNonParty6]
+#Title screen: Song Selection
 Inheritance = SongRouletteTextNonParty6
-Y = 15
-
-[SongChessboardStaticNonParty6]
-Inheritance = SongRouletteStaticNonParty6
-X = 200
-W = 28
-
-[SongChessboardTextNonParty7]
-Inheritance = SongRouletteTextNonParty7
-X = 237
-Y = 562
-Size = 22
-
-[SongChessboardStaticNonParty7]
-Inheritance = SongRouletteStaticNonParty7
-X = 295
-W = 28
-
-[SongChessboardTextNonParty8]
-Inheritance = SongRouletteTextNonParty8
-X = 331
-Y = 562
-Size = 22
-
-[SongChessboardStaticNonParty8]
-Inheritance = SongRouletteStaticNonParty8
-X = 465
-W = 28
-
-[SongChessboardTextNonParty9]
-Inheritance = SongRouletteTextNonParty9
-X = 501
-Y = 562
-Size = 22
+X = 10
+Y = 10
+Size = 45
 
 #and these are the ones for partymode
 # NAVBAR for party
