Renewed tiles mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1261,7 +1261,7 @@ X = 30
 Y = 6
 Color = White
 Font = 0
-Size = 60
+Size = 40
 Text = SING_SONG_SELECTION
 Align = 0
 
@@ -3707,198 +3707,215 @@ Y = 185
 Tex = SongBG
 
 [SongMosaicCover]
-X = 45
-Y = 90
-W = 120
-H = 135
+X = 105
+Y = 70
+W = 100
+H = 125
 ZoomThumbW = 125
 ZoomThumbH = 140
-Rows = 3
+Rows = 4
 Cols = 1
 Padding = 4
 Reflections = 0
 
 [SongMosaicMainCover]
-X = 180
-Y = 90
+X = 220
+Y = 70
 W = 355
-H = 278
+H = 254
 Type = Transparent
 
 [SongMosaicEqualizer]
 Inheritance = SongEqualizer
-X = 15
-Y = 500
-PieceW = 5
-PieceH = 5
+X = 590
+Y = 322
+PieceW = 10
+PieceH = 10
 Space = 1
-Length = 18
+Length = 40
+Bands = 18
 
 [SongMosaicMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 500
+X = 540
 Y = 432
 
 [SongMosaicCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 500
+X = 540
 Y = 432
 
 [SongMosaicVideoIcon]
 Inheritance = SongVideoIcon
-X = 502
+X = 542
 Y = 400
 
 [SongMosaicDuetIcon]
 Inheritance = SongDuetIcon
-X = 500
+X = 540
 Y = 428
 W = 22
 H = 24
 
 [SongMosaicRapIcon]
 Inheritance = SongRapIcon
-X = 500
+X = 540
 Y = 465
 W = 20
 H = 24
 
 [SongMosaicStatic1]
-X = 180
-Y = 370
+X = 220
+Y = 328
 W = 355
-H = 132
+H = 254
 Z = 0.9
 Color = ColorLight
 Tex = JukeboxSongSelection
 Type = Colorized
-Reflection = 1
+Reflection = 0
 ReflectionSpacing = 2
 
 [SongMosaicTextArtist]
-X = 190
-Y = 380
+X = 230
+Y = 340
 W = 300
 Color = White
 Font = 1
-Size = 28
+Size = 24
 Align = 0
 
 [SongMosaicTextTitle]
-X = 190
-Y = 435
+X = 230
+Y = 390
 W = 300
 Color = White
-Size = 24
+Size = 20
 
 [SongMosaicTextNumber]
 Inheritance = SongSlideTextNumber
-X = 141
-Y = 517
-Size = 18
-Align = 1
+X = 565
+Y = 555
+Size = 14
+Align = 2
 
 [SongMosaicTextYear]
 Inheritance = SongSlideTextYear
-X = 530
-Y = 380
+X = 565
+Y = 343
 Z = 1
-Size = 18
+Size = 16
 Align = 2
 
 ########## LEGEND MOSAIC #########
 
 [SongMosaicStaticNonParty1]
 Inheritance = SongStaticNonParty1
-X = 555
-Y = 370
-W = 215
-H = 131
+X = 590
+Y = 0
+W = 210
+H = 800
 
 [SongMosaicTextNonParty1]
 Inheritance = SongTextNonParty1
-X = 661
-Y = 376
+X = 690
+Y = 414
+
 
 [SongMosaicStaticNonParty2]
 Inheritance = SongStaticNonParty2
-X = 596
-Y = 404
+X = 616
+Y = 444
 
 [SongMosaicTextNonParty2]
 Inheritance = SongTextNonParty2
-X = 625
-Y = 406
+X = 645
+Y = 446
 
 [SongMosaicStaticNonParty3]
 Inheritance = SongStaticNonParty3
-X = 595
-Y = 424
+X = 615
+Y = 464
 
 [SongMosaicTextNonParty3]
 Inheritance = SongTextNonParty3
-X = 625
-Y = 426
+X = 645
+Y = 466
 
 [SongMosaicStaticNonParty4]
 Inheritance = SongStaticNonParty4
-X = 595
-Y = 444
+X = 615
+Y = 484
+Size = 10
 
 [SongMosaicTextNonParty4]
 Inheritance = SongTextNonParty4
-X = 625
-Y = 446
+X = 645
+Y = 486
 
 [SongMosaicStaticNonParty5]
 Inheritance = SongStaticNonParty5
-X = 595
-Y = 464
+X = 615
+Y = 504
 
 [SongMosaicTextNonParty5]
 Inheritance = SongTextNonParty5
-X = 625
-Y = 466
+X = 645
+Y = 506
+
+#Title: Song selection
+[SongMosaicTextNonParty6]
+Inheritance = SongRouletteTextNonParty6
+X = 40
+Y = 12
 
 [SongMosaicTextMaxScore]
 Inheritance = SongTextMaxScore
-X = 565
-Y = 280
+X = 230
+Y = 480
+Size = 15
 
 [SongMosaicTextMediaScore]
 Inheritance = SongTextMediaScore
-X = 565
-Y = 320
+X = 230
+Y = 520
+Size = 15
 
 [SongMosaicTextMaxScore2]
 Inheritance = SongTextMaxScore2
-X = 705
-Y = 280
+X = 270
+Y = 480
+Size = 15
 
 [SongMosaicTextMediaScore2]
 Inheritance = SongTextMediaScore2
-X = 705
-Y = 320
+X = 270
+Y = 500
+Size = 15
 
 [SongMosaicTextScoreUser]
 Inheritance = SongTextScoreUser
-X = 705
-Y = 298
+X = 270
+Y = 520
+Size = 15
 
 [SongMosaicTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
-X = 715
-Y = 280
+X = 290
+Y = 480
+Size = 15
 
 [SongMosaicTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
-X = 715
-Y = 320
+X = 290
+Y = 500
+Size = 15
 
 [SongMosaicTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
-X = 715
-Y = 298
+X = 290
+Y = 520
+Size = 15
 
 [SongMosaicStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
@@ -3974,31 +3991,6 @@ Y = 155
 Inheritance = SongText3PlayersDuetSingerP3
 X = 642
 Y = 185
-
-[SongMosaicTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 40
-Y = 12
-
-[SongMosaicStaticNonParty6]
-Inheritance = SongRouletteStaticNonParty6
-
-[SongMosaicTextNonParty7]
-Inheritance = SongRouletteTextNonParty7
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongMosaicStaticNonParty7]
-Inheritance = SongRouletteStaticNonParty7
-
-[SongMosaicTextNonParty8]
-Inheritance = SongRouletteTextNonParty8
-
-[SongMosaicStaticNonParty8]
-Inheritance = SongRouletteStaticNonParty8
-
-[SongMosaicTextNonParty9]
-Inheritance = SongRouletteTextNonParty9
 
 #and these are the ones for partymode
 [SongMosaicStaticParty1]
