Renewed list mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1015,7 +1015,7 @@ Text = SING_SONG_SELECTION_LEGEND_DUET
 [SongTextScore]
 Color = White
 Font = 0
-Size = 22
+Size = 15
 Align = 0
 
 [SongTextMaxScore]
@@ -3194,10 +3194,10 @@ Tex = SongBG
 
 
 [SongListSelectSong]
-X = 40
-Y = 90
-W = 490
-H = 80
+X = 30
+Y = 65
+W = 510
+H = 78
 Z = 0.50
 Padding = 2
 DColor = GrayLightest
@@ -3209,95 +3209,96 @@ Reflection = 0
 ReflectionSpacing = 0
 
 [SongListCover]
-X = 44
-Y = 95
-W = 55
-H = 70
+X = 34
+Y = 70
+W = 50
+H = 68
 Z = 0.95
 SelectReflection = 0
 SelectReflectionSpacing = 0
 Cols = 1
-Rows = 5
+Rows = 6
 Padding = 12
 Reflections = 0
 
 [SongListMainCover]
 X = 555
-Y = 338
+Y = 65
 W = 215
-H = 161
+H = 158
 Type = Transparent
 
 [SongListEqualizer]
 Inheritance = SongEqualizer
 Visible = 0
-X = 750
-Y = 505
-Bands = 7
+X = 610
+Y = 538
+Bands = 25
 Length = 15
-Reflection = 0
-ReflectionSpacing = 0
+Reflection = 1
+ReflectionSpacing = 2
 
 [SongListMedleyIcon]
 Inheritance = SongMedleyIcon
-X = 490
-Y = 122
+X = 500
+Y = 112
 Z = 1
 
 [SongListCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
-X = 490
-Y = 122
+X = 500
+Y = 112
 Z = 1
 
 [SongListVideoIcon]
 Inheritance = SongVideoIcon
-X = 491
-Y = 96
+X = 501
+Y = 86
 Z = 1
 
 [SongListDuetIcon]
 Inheritance = SongDuetIcon
-X = 490
-Y = 122
+X = 500
+Y = 112
 W = 22
 H = 24
 Z = 1
 
 [SongListRapIcon]
 Inheritance = SongRapIcon
-X = 467
-Y = 100
+X = 470
+Y = 112
 W = 18
 H = 22
 Z = 1
 
 [SongListTextArtist]
-X = 115
-Y = 100
-W = 440
+X = 100
+Y = 73
+W = 390
 Color = White
 Font = 1
-Size = 28
+Size = 20
 
 [SongListTextTitle]
-X = 115
-Y = 130
-W = 330
+X = 100
+Y = 108
+W = 390
 Color = White
-Size = 26
+Size = 18
 Align = 0
 
 [SongListTextNumber]
 Inheritance = SongSlideTextNumber
-X = 522
-Y = 500
-Size = 20
+X = 30
+Y = 550
+Size = 15
+Align = 0
 
 [SongListTextYear]
 Inheritance = SongSlideTextYear
-X = 522
-Y = 148
+X = 527
+Y = 72
 Size = 18
 Align = 2
 
@@ -3306,204 +3307,185 @@ Align = 2
 [SongListStaticNonParty1]
 Inheritance = SongStaticNonParty1
 X = 555
-Y = 216
-W = 215
-H = 119
+Y = 0
+W = 245
+H = 800
 
 [SongListTextNonParty1]
 Inheritance = SongTextNonParty1
 X = 661
-Y = 222
+Y = 422
 
 [SongListStaticNonParty2]
 Inheritance = SongStaticNonParty2
 X = 596
-Y = 250
+Y = 450
 
 [SongListTextNonParty2]
 Inheritance = SongTextNonParty2
 X = 625
-Y = 252
+Y = 452
 
 [SongListStaticNonParty3]
 Inheritance = SongStaticNonParty3
 X = 595
-Y = 270
+Y = 470
 
 [SongListTextNonParty3]
 Inheritance = SongTextNonParty3
 X = 625
-Y = 272
+Y = 472
 
 [SongListStaticNonParty4]
 Inheritance = SongStaticNonParty4
 X = 595
-Y = 290
+Y = 490
 
 [SongListTextNonParty4]
 Inheritance = SongTextNonParty4
 X = 625
-Y = 292
+Y = 492
 
 [SongListStaticNonParty5]
 Inheritance = SongStaticNonParty5
 X = 595
-Y = 310
+Y = 510
 
 [SongListTextNonParty5]
 Inheritance = SongTextNonParty5
 X = 625
-Y = 312
+Y = 512
+
+#Title: Song selection
+[SongListTextNonParty6]
+Inheritance = SongRouletteTextNonParty6
+X = 30
+Y = 12
 
 [SongListTextMaxScore]
 Inheritance = SongTextMaxScore
-X = 40
-Y = 510
+X = 580
+Y = 260
 
 [SongListTextMediaScore]
 Inheritance = SongTextMediaScore
-X = 40
-Y = 550
+X = 580
+Y = 300
 
 [SongListTextMaxScore2]
 Inheritance = SongTextMaxScore2
-X = 180
-Y = 510
+X = 720
+Y = 260
 
 [SongListTextMediaScore2]
 Inheritance = SongTextMediaScore2
-X = 180
-Y = 550
+X = 720
+Y = 300
 
 [SongListTextScoreUser]
 Inheritance = SongTextScoreUser
-X = 180
-Y = 528
+X = 720
+Y = 278
 
 [SongListTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
-X = 190
-Y = 510
+X = 730
+Y = 260
 
 [SongListTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
-X = 190
-Y = 550
+X = 730
+Y = 300
 
 [SongListTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
-X = 190
-Y = 528
+X = 730
+Y = 278
 
 [SongListStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
 X = 555
-Y = 115
+Y = 415
 W = 194
 
 [SongListStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
 X = 555
-Y = 145
+Y = 445
 W = 194
 
 [SongListStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
 X = 555
-Y = 110
+Y = 410
 W = 194
 
 [SongListStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
 X = 555
-Y = 140
+Y = 440
 W = 194
 
 [SongListStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
 X = 555
-Y = 170
+Y = 470
 W = 194
 
 [SongListStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
 X = 567
-Y = 115
+Y = 415
 W = 194
 
 [SongListStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
 X = 567
-Y = 145
+Y = 445
 W = 194
 
 [SongListStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
 X = 567
-Y = 110
+Y = 410
 W = 200
 
 [SongListStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
 X = 567
-Y = 140
+Y = 440
 W = 200
 
 [SongListStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
 X = 567
-Y = 170
+Y = 470
 W = 200
 
 [SongListText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
 X = 650
-Y = 120
+Y = 420
 
 [SongListText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
 X = 650
-Y = 150
+Y = 450
 
 [SongListText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
 X = 650
-Y = 115
+Y = 415
 
 [SongListText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
 X = 650
-Y = 145
+Y = 445
 
 [SongListText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
 X = 650
-Y = 175
-
-[SongListTextNonParty6]
-Inheritance = SongRouletteTextNonParty6
-X = 40
-Y = 12
-
-[SongListStaticNonParty6]
-Inheritance = SongRouletteStaticNonParty6
-
-[SongListTextNonParty7]
-Inheritance = SongRouletteTextNonParty7
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongListStaticNonParty7]
-Inheritance = SongRouletteStaticNonParty7
-
-[SongListTextNonParty8]
-Inheritance = SongRouletteTextNonParty8
-
-[SongListStaticNonParty8]
-Inheritance = SongRouletteStaticNonParty8
-
-[SongListTextNonParty9]
-Inheritance = SongRouletteTextNonParty9
+Y = 475
 
 #and these are the ones for partymode
 [SongListStaticParty1]
@@ -3873,124 +3855,116 @@ Y = 12
 Inheritance = SongTextMaxScore
 X = 230
 Y = 480
-Size = 15
 
 [SongMosaicTextMediaScore]
 Inheritance = SongTextMediaScore
 X = 230
 Y = 520
-Size = 15
 
 [SongMosaicTextMaxScore2]
 Inheritance = SongTextMaxScore2
 X = 270
 Y = 480
-Size = 15
 
 [SongMosaicTextMediaScore2]
 Inheritance = SongTextMediaScore2
 X = 270
 Y = 500
-Size = 15
 
 [SongMosaicTextScoreUser]
 Inheritance = SongTextScoreUser
 X = 270
 Y = 520
-Size = 15
 
 [SongMosaicTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
 X = 290
 Y = 480
-Size = 15
 
 [SongMosaicTextMediaScoreLocal]
 Inheritance = SongTextMediaScoreLocal
 X = 290
 Y = 500
-Size = 15
 
 [SongMosaicTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
 X = 290
 Y = 520
-Size = 15
 
 [SongMosaicStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
-X = 565
-Y = 135
+X = 615
+Y = 435
 
 [SongMosaicStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
-X = 565
-Y = 165
+X = 615
+Y = 465
 
 [SongMosaicStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
-X = 565
-Y = 120
+X = 615
+Y = 420
 
 [SongMosaicStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
-X = 565
-Y = 150
+X = 615
+Y = 450
 
 [SongMosaicStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
-X = 565
-Y = 180
+X = 615
+Y = 480
 
 [SongMosaicStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
-X = 575
-Y = 135
+X = 625
+Y = 435
 
 [SongMosaicStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
-X = 575
-Y = 165
+X = 625
+Y = 465
 
 [SongMosaicStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
-X = 575
-Y = 120
+X = 625
+Y = 420
 
 [SongMosaicStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
-X = 575
-Y = 150
+X = 625
+Y = 450
 
 [SongMosaicStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
-X = 575
-Y = 180
+X = 625
+Y = 480
 
 [SongMosaicText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
-X = 642
-Y = 140
+X = 692
+Y = 440
 
 [SongMosaicText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
-X = 642
-Y = 170
+X = 692
+Y = 470
 
 [SongMosaicText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
-X = 642
-Y = 125
+X = 692
+Y = 425
 
 [SongMosaicText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
-X = 642
-Y = 155
+X = 692
+Y = 455
 
 [SongMosaicText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
-X = 642
-Y = 185
+X = 692
+Y = 485
 
 #and these are the ones for partymode
 [SongMosaicStaticParty1]
